--- a/www/index.html
+++ b/www/index.html
@@ -27,11 +27,10 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="lib/node_modules/ionic-native/dist/ionic.native.min.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="lib/node_modules/ionic-native/dist/ionic.native.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
